--- a/visualizations/_posts/2020-04-03-china-state-media-covid-19.html
+++ b/visualizations/_posts/2020-04-03-china-state-media-covid-19.html
@@ -1,5 +1,5 @@
 ---
-layout: main
+layout: post-template
 title: Chinese State Media's Coverage of COVID-19
 excerpt: Chinese state media is strictly centralized and state pressure on journalists has been a constant theme throughout the COVID-19 pandemic.
 cover-image: images/visualizations/china-state-media-covid-19/1-Coronavirus Stories reported by China's State Media.svg
